--- a/css/view/wrapper/app/search/results_search_app_widget.css
+++ b/css/view/wrapper/app/search/results_search_app_widget.css
@@ -186,7 +186,7 @@
 	text-align: right;
 }
 
-#search_results_wrapper #search_results_container .search_result .distance[data-result-distance]:AFTER
+#search_results_wrapper #search_results_container .search_result[data-result-distance] .distance:AFTER
 	{
 	content: "m";
 	padding-left: 0.1em;
